# MauiStore

./: meson.build
data/: meson.build  pm.mirko.maui-store.appdata.xml.in  pm.mirko.maui-store.desktop.in  pm.mirko.maui-store.gschema.xml
po/: POTFILES  meson.build
src/: main.py  mauistore.in  meson.build  repository.py  window.py
src/pages/: list.py  meson.build
src/ui/: indexing.ui  list-entry.ui  list.ui  mauistore.gresource.xml  meson.build  window.ui
